# konfig

./: LICENSE  README.md  pyproject.toml
konfig/: __init__.py  core.py
