[project]
name = "konfig"
description = "Key Organizer for Numerous Functionalities and Intricate Gearings"
readme = "README.md"
version = "0.1.0"
authors = [{ name = "Kevin N. Dietrich", email = "kenichdietrich@gmail.com" }]
requires-python = ">= 3.9"
dependencies = ["toml>=0.10.2"]

[project.optional-dependencies]
dev = ["black"]

[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.build_meta"
